duplicated progress on portfolio html

--- a/index.html
+++ b/index.html
@@ -6,53 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
-    <title>Document</title>
+    <title>bootstrap Portfolio</title>
 </head>
 <body>
-         <!-- header row -->
-    <div class="row">
-            <header>
-                    <div class="headerDiv">
-                <!-- col with About Me -->
-                <div class="col-lg-4">
-                        <h1>Massiel Escano</h1>
-                </div>
-                <div class="col-lg-8">
-            <!-- col with Nav Bar -->
-            <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                  </ul>
-            <!-- Nav Bar end -->
-                </div>
-                    </div>   
-            </header>            
+    <div class="container">
+
+        <!-- header row -->
+        <header>
+   <div class="row">
+               <!-- col with About Me -->
+               <div class="col-sm-4">
+                       <h1>Massiel Escano</h1>
+               </div>
+                 <!-- col with Nav Bar -->
+               <div class="col-sm-8">
+           <ul class="nav justify-content-end">
+                   <li class="nav-item">
+                     <a class="nav-link active" href="#">About Me</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="portfolio.html">Portfolio</a>
+                   </li>
+                 </ul>
+           <!-- Nav Bar end -->
+               </div>  
+           </header>
 </div>
 <!-- header row ends -->
 
 <!-- row 2 begins -->
 <div class="row">
-    <!-- Under Nav, holds imgae, p text, background design -->
-    <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="portfolio.html" role="button">View Portfolio</a>
-          </div>
+   <!-- Under Nav, holds imgae, p text, background design -->
 
+   <!-- jumbotron col -->
+   <!-- <div class="col"> -->
+       <section>
+            <div class="jumbotron">
+                    <h1 class="display-4">Hello, world!</h1>
+                    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                    <hr class="my-4">
+                    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                    <a class="btn btn-primary btn-lg" href="portfolio.html" role="button">View Portfolio</a>
+                  </div>
+       </section>
+       
 
+   <!-- </div> -->
+   <!-- jumbotron col ends -->
+  
 </div>
 
+<!-- container end  -->
+    </div>
 
 
-
-
-
+   
    
 </body>
 </html>
