saving current state of page- looking for inspiration

--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
        <header>
            <div class="headerDiv">
                 <!-- col with About Me -->
-
                  <div class="col-sm-4">
                      <div id="h1" >Massiel Escano</div>
                 </div>
                <!-- col with Nav Bar -->
                  <div class="col-sm-8">
-                     <ul class="nav justify-content-end">
+                     <ul class="nav justify-content-end" style="background-color: aliceblue;">
                           <li class="nav-item">
                              <a class="nav-link active" href="index.html">About Me</a>
                          </li>
