--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,14 @@
                
            <div class="row">
                        <!-- col with About Me -->
-                       <div class="col-sm-4">
+                       <div class="col-md-4">
                                <h1>Massiel Escano</h1>
                        </div>
                          <!-- col with Nav Bar -->
-                       <div class="col-sm-8">
+                       <div class="col-md-8">
                    <ul class="nav justify-content-end">
                            <li class="nav-item">
-                             <a class="nav-link active" href="#">About Me</a>
+                             <a class="nav-link active" href="index.html">About Me</a>
                            </li>
                            <li class="nav-item">
                              <a class="nav-link" href="portfolio.html">Portfolio</a>
