added 2 col into 2nd row where portfolio/carousel will be

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <div class="container">
         <!-- header row -->    
    <div class="row">
-       <header>
-           <div class="headerDiv">
+       <!-- <header> -->
+           <!-- <div class="headerDiv"> -->
                 <!-- col with About Me -->
-                 <div class="col-sm-4">
+                 <div class="col-sm-4 headerDiv">
                      <div id="h1" >Massiel Escano</div>
                 </div>
                <!-- col with Nav Bar -->
@@ -40,8 +40,8 @@
                      </ul>
               <!-- Nav Bar end -->
                  </div>
-           </div>
-    </header>         
+           <!-- </div> -->
+    <!-- </header>          -->
 </div>
 <!-- header row ends -->
 
