removed float from h1

--- a/index.html
+++ b/index.html
@@ -47,26 +47,20 @@
 
 <!-- row 2 begins -->
 <div class="row">
-   <!-- Under Nav, holds imgae, p text, background design -->
-       <section>
-            <h2>About Me</h2>
+    <!-- Under Nav, holds imgae, p text -->
+    
+    <div class="col"> 
+             <h2>About Me</h2>     
+ 
+    </div>
+    <!-- holds column 2 with carousel images -->
+    <div class="col">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt dui ut ornare lectus sit amet est. Faucibus purus in massa tempor nec. Ultricies mi quis hendrerit dolor magna eget est lorem. Non enim praesent elementum facilisis leo vel fringilla est. Est ultricies integer quis auctor elit. Habitant morbi tristique senectus et netus. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Orci a scelerisque purus semper. Augue neque gravida in fermentum et sollicitudin ac. Tincidunt dui ut ornare lectus sit amet est. Amet justo donec enim diam.
 
-            <p> I am Massiel, the last of my kind. I was born in Dominican Republic
-                    and migrated to the U.S of A very young. I grew up in bronx, New York and lived there
-                   the majority of my life. I then moved to Los Angeles and lived there for 7 years.
-                   Now I am here in Florida, ready to retire. I have a long ways from that.</p>
-                    <p>I have studied for a bachelors in Computer Information Systems, specializing in software
-                   programming. I decided that completing my degree was pointless and not cost efficient.
-                   I am a very ambitious person, and to me this is a make it or break it point in my life. 
-                   That's what I say to motivate myself and put a fire in me. </p>
-                   <p> In my own time, I dont socialize much. Even though I don't, I can
-                   make friends very easily. I stay home for the most part, though I do love
-                   to sample different types of food, especially asian dining. I eat chocolate ALL the time.
-                   My favorite is belgium milk chocolate. Pretty much anything sweet will float my boat. I enjoy 
-                  yoga, meditation and any calm environment. I also enjoy video games, mostly rpg and simulation games.</p>
-                  <p> For the most part, I go with the flow because life is too short. </p>
-       </section>
-</div>
+            Enim tortor at auctor urna nunc id cursus. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Ac turpis egestas integer eget aliquet nibh praesent tristique magna. Mauris sit amet massa vitae tortor condimentum lacinia. Sagittis vitae et leo duis ut diam quam nulla. Tellus pellentesque eu tincidunt tortor aliquam nulla. Diam sit amet nisl suscipit. Morbi tincidunt augue interdum velit euismod in pellentesque. Platea dictumst quisque sagittis purus sit. Magna ac placerat vestibulum lectus mauris. In massa tempor nec feugiat nisl pretium fusce id velit. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Mauris sit amet massa vitae tortor. Elit pellentesque habitant morbi tristique senectus et netus et malesuada. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Eros donec ac odio tempor orci dapibus ultrices in. Ut consequat semper viverra nam libero justo laoreet sit. Feugiat in ante metus dictum at tempor.
+      
+    </div>
+ </div>
 
 <!-- container end  -->
     </div>
