added my pic, adjusted text next to pic

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                <!-- col with Nav Bar -->
                  <div class="col-sm-8">
-                     <ul class="nav justify-content-end" style="background-color: aliceblue;">
+                     <ul class="nav justify-content-end">
                           <li class="nav-item">
                              <a class="nav-link active" href="index.html">About Me</a>
                          </li>
@@ -49,12 +49,14 @@
 <div class="row">
     <!-- Under Nav, holds imgae, p text -->
     
-    <div class="col"> 
+    <div class="col-sm"> 
              <h2>About Me</h2>     
+
+             <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\ME2.jpg" style= "width: 400px; height: 500px">
  
     </div>
     <!-- holds column 2 with carousel images -->
-    <div class="col">
+    <div class="col-sm text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt dui ut ornare lectus sit amet est. Faucibus purus in massa tempor nec. Ultricies mi quis hendrerit dolor magna eget est lorem. Non enim praesent elementum facilisis leo vel fringilla est. Est ultricies integer quis auctor elit. Habitant morbi tristique senectus et netus. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Orci a scelerisque purus semper. Augue neque gravida in fermentum et sollicitudin ac. Tincidunt dui ut ornare lectus sit amet est. Amet justo donec enim diam.
 
             Enim tortor at auctor urna nunc id cursus. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Ac turpis egestas integer eget aliquet nibh praesent tristique magna. Mauris sit amet massa vitae tortor condimentum lacinia. Sagittis vitae et leo duis ut diam quam nulla. Tellus pellentesque eu tincidunt tortor aliquam nulla. Diam sit amet nisl suscipit. Morbi tincidunt augue interdum velit euismod in pellentesque. Platea dictumst quisque sagittis purus sit. Magna ac placerat vestibulum lectus mauris. In massa tempor nec feugiat nisl pretium fusce id velit. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Mauris sit amet massa vitae tortor. Elit pellentesque habitant morbi tristique senectus et netus et malesuada. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Eros donec ac odio tempor orci dapibus ultrices in. Ut consequat semper viverra nam libero justo laoreet sit. Feugiat in ante metus dictum at tempor.
