reverted back to pic, text in sepearte col

--- a/index.html
+++ b/index.html
@@ -50,19 +50,15 @@
 <div class="row">
     <!-- Under Nav, holds imgae, p text -->
     
-    <!-- <div class="col-sm"> 
+    <div class="col-sm"> 
              <h2>About Me</h2>     
 
              <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\ME2.jpg" style= "width: 400px; height: 500px">
  
-    </div> -->
+    </div>
  
     <div class="col-sm text">
-
-            <h2>About Me</h2>     
-
-            <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\ME2.jpg" style= "width: 400px; height: 500px">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt dui ut ornare lectus sit amet est.
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt dui ut ornare lectus sit amet est.
              Faucibus purus in massa tempor nec. Ultricies mi quis hendrerit dolor magna eget est lorem. Non enim praesent elementum facilisis leo vel fringilla est. Est ultricies integer quis auctor elit. Habitant morbi tristique senectus et netus. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Orci a scelerisque purus semper. Augue neque gravida in fermentum et sollicitudin ac. Tincidunt dui ut ornare lectus sit amet est. Amet justo donec enim diam.
             Enim tortor at auctor urna nunc id cursus. Fames ac turpis egestas maecenas pharetr</p>
       
