--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                              <a class="nav-link active" href="index.html">About Me</a>
                          </li>
                           <li class="nav-item">
-                             <a class="nav-link" href="portfolio.html">Portfolio</a>
+                             <a class="nav-link" href="portfolio.html">Contact</a>
                           </li>
                      </ul>
               <!-- Nav Bar end -->
@@ -105,21 +105,6 @@
                                   <span class="sr-only">Next</span>
                                 </a>
                               </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- collapse 2 -->
-                <div class="card">
-                  <div class="card-header" id="headingTwo">
-                    <h2 class="mb-0">
-                      <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                       Contact
-                      </button>
-                    </h2>
-                  </div>
-                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                     </div>
                   </div>
                 </div>
