--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                              <a class="nav-link active" href="index.html">About Me</a>
                          </li>
                           <li class="nav-item">
-                             <a class="nav-link" href="portfolio.html">Contact</a>
+                             <a class="nav-link" href="contact.html">Contact</a>
                           </li>
                      </ul>
               <!-- Nav Bar end -->
@@ -84,26 +84,27 @@
                   <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
                         <!-- enter carousel -->
-                        <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
-                                  <div class="carousel-item active" data-interval="10000">
-                                    <img src="..." class="d-block w-100" alt="...">
-                                  </div>
-                                  <div class="carousel-item" data-interval="2000">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                  <div class="carousel-item active">
+                                    <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\FineFood.jpg" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                    <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\yogi.jpg" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\Choco.jpg" class="d-block w-100" alt="...">
                                   </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Next</span>
                                 </a>
+                              </div>
                               </div>
                     </div>
                   </div>
