added text in carousel

--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,12 @@
             <form>
                 <div class="form-group">
                   <label for="formGroupExampleInput">Name</label>
-                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Write Something">
                 </div>
                 <br>
                 <div class="form-group">
                   <label for="formGroupExampleInput2">Subject</label>
-                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Anything">
                 </div>
               </form>
         </div>
