added button on contact page

--- a/index.html
+++ b/index.html
@@ -103,13 +103,20 @@
                       </div>
                       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt dui ut ornare lectus sit amet est.
-                            Faucibus purus in massa tempor nec. Ultricies mi quis hendrerit dolor magna eget est lorem. Non enim praesent elementum facilisis leo vel fringilla est. Est ultricies
-                             integer quis auctor elit. Habitant morbi tristique senectus et netus. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Orci a scelerisque purus semper.
-                              Augue neque gravida in fermentum et sollicitudin ac. Tincidunt dui ut ornare lectus sit amet est. Amet justo donec enim diam.
-                           Enim tortor at auctor urna nunc id cursus. Fames ac turpis  massa tempor nec. Ultricies mi quis hendrerit dolor magna eget est lorem. Non enim praesent elementum facilisis leo
-                            vel fringilla est. Est ultricies integer quis auctor elit. Habitant morbi tristique senectus et netus. Proin sagittis nisl rhoncus mattis rhoncus urna neqegestas maecenas pharetr
-                     
+                            <p> I am Massiel, the last of my kind. I was born in Dominican Republic
+                                and migrated to the U.S of A very young. I grew up in bronx, New York and lived there
+                               the majority of my life. I then moved to Los Angeles and lived there for 7 years.
+                               Now I am here in Florida, ready to retire. I have a long ways from that.</p>
+                                <p>I have studied for a bachelors in Computer Information Systems, specializing in software
+                               programming. I decided that completing my degree was pointless and not cost efficient.
+                               I am a very ambitious person, and to me this is a make it or break it point in my life. 
+                               That's what I say to motivate myself and put a fire in me. </p>
+                               <p> In my own time, I dont socialize much. Even though I don't, I can
+                               make friends very easily. I stay home for the most part, though I do love
+                               to sample different types of food, especially asian dining. I eat chocolate ALL the time.
+                               My favorite is belgium milk chocolate. Pretty much anything sweet will float my boat. I enjoy 
+                              yoga, meditation and any calm environment. I also enjoy video games, mostly rpg and simulation games.</p>
+                              <p> For the most part, I go with the flow because life is too short. </p>
                         </div>
                       </div>
                     </div>
