--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>bootstrap Portfolio</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css" >
+        <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap" rel="stylesheet">
+        <title>bootstrap Portfolio</title>
+    </head>
 <body>
 
         <div class="container">
@@ -25,7 +26,7 @@
                              <a class="nav-link active" href="index.html">About Me</a>
                            </li>
                            <li class="nav-item">
-                             <a class="nav-link" href="portfolio.html">Portfolio</a>
+                             <a class="nav-link" href="contact.html">Contact</a>
                            </li>
                          </ul>
                    <!-- Nav Bar end -->
@@ -48,7 +49,13 @@
                   <label for="formGroupExampleInput2">Subject</label>
                   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Anything">
                 </div>
+                <br>
+                <div class="form-group">
+                    <label for="formGroupExampleInput2">Message</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Please">
+                  </div>
               </form>
+              <button type="button" class="btn btn-outline-danger">Submit</button>
         </div>
      </div>
         
