added color to name on contact page

--- a/contact.html
+++ b/contact.html
@@ -11,26 +11,25 @@
     </head>
 <body>
 
-        <div class="container">
-
+      <div class="container">
                 <!-- header row -->
-           <div class="row">
-                       <!-- col with About Me -->
-                       <div class="col-md-4">
-                               <h1>Massiel Escano</h1>
-                       </div>
-                         <!-- col with Nav Bar -->
-                       <div class="col-md-8">
-                        <ul class="nav justify-content-end">
-                           <li class="nav-item">
-                             <a class="nav-link active" href="index.html">About Me</a>
+                <div class="row">
+                  <!-- col with About Me -->
+                   <div class="col-sm-4 headerDiv">
+                       <div id="h1" >Massiel Escano</div>
+                  </div>
+                 <!-- col with Nav Bar -->
+                   <div class="col-sm-8">
+                       <ul class="nav justify-content-end">
+                            <li class="nav-item">
+                               <a class="nav-link active" href="index.html">About Me</a>
                            </li>
-                           <li class="nav-item">
-                             <a class="nav-link" href="contact.html">Contact</a>
-                           </li>
-                         </ul>
-                   <!-- Nav Bar end -->
-                       </div>   
+                            <li class="nav-item">
+                               <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                       </ul>
+                <!-- Nav Bar end -->
+                   </div>  
           </div>
         <!-- header row ends -->
 
@@ -52,7 +51,7 @@
                 <br>
                 <div class="form-group">
                     <label for="formGroupExampleInput2">Message</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Please">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Please" style="height: 40px">
                   </div>
               </form>
               <button type="button" class="btn btn-outline-danger">Submit</button>
