displayed my contact info and created readme

--- a/contact.html
+++ b/contact.html
@@ -7,39 +7,52 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" >
         <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap" rel="stylesheet">
-        <title>bootstrap Portfolio</title>
+        <title>Bootstrap Portfolio</title>
     </head>
 <body>
 
       <div class="container">
                 <!-- header row -->
-                <div class="row">
-                  <!-- col with About Me -->
-                   <div class="col-sm-4 headerDiv">
+          <div class="row">
+               <!-- col with About Me -->
+               <div class="col-sm-4 headerDiv">
                        <div id="h1" >Massiel Escano</div>
-                  </div>
-                 <!-- col with Nav Bar -->
-                   <div class="col-sm-8">
-                       <ul class="nav justify-content-end">
-                            <li class="nav-item">
-                               <a class="nav-link active" href="index.html">About Me</a>
-                           </li>
-                            <li class="nav-item">
-                               <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                       </ul>
-                <!-- Nav Bar end -->
-                   </div>  
+                </div>
+                <!-- col with Nav Bar -->
+                <div class="col-sm-8">
+                   <ul class="nav justify-content-end">
+                      <li class="nav-item">
+                           <a class="nav-link active" href="index.html">About Me</a>
+                       </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                   </ul>
+             <!-- Nav Bar end -->
+                </div>  
           </div>
-        <!-- header row ends -->
 
-<!-- row 2 begins -->
+<!-- row 2 begins, will display my contact info -->
+<div class="row">
+  <h2>Contact me at:</h2>
+  <br>
+  <h3> Massielescano@yahoo.com</h3> <br>
+  
+
+</div>
+<!-- tell them they also have option to leave message -->
+<div class="row">
+  <h4>Or Leave Your Info Below</h4>
+</div>
+
+
+<!-- form row to hold contact info and message of a person -->
 <div class="row">
 
         <!-- holds form-->       
         <div class="col-sm form"> 
             <form>
-                <div class="form-group">
+                <div class="form-group" >
                   <label for="formGroupExampleInput">Name</label>
                   <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Write Something">
                 </div>
