--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\FineFood.jpg" class="d-block w-100" alt="...">
+                                    <img src="assets\Images\FineFood.jpg" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\yogi.jpg" class="d-block w-100" alt="...">
+                                    <img src="assets\Images\yogi.jpg" class="d-block w-100" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\Choco.jpg" class="d-block w-100" alt="...">
+                                    <img src="assets\Images\Choco.jpg" class="d-block w-100" alt="...">
                                   </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
