shortend code to access images, added alt to images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
     <div class="col-sm-5 Pic"> 
 
-             <img src="C:\Users\massi\OneDrive\Documents\UCF\LocalClassRepo\Homework\02-CSS-Bootstrap\bootstrap-portfolio\assets\Images\ME2.jpg" onmouseup="playAudio()" onmousedown="muteAudio()" style= "width: 380px; height: 450px" alt="..." class="rounded-circle">
+             <img src="assets\Images\ME2.jpg" class="rounded-circle" onmouseup="playAudio()" onmousedown="muteAudio()" style= "width: 380px; height: 450px" alt="Massiel">
     
             </div>
 
@@ -71,13 +71,13 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="assets\Images\FineFood.jpg" class="d-block w-100" alt="...">
+                                    <img src="assets\Images\FineFood.jpg" class="d-block w-100" alt="FineFood">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="assets\Images\yogi.jpg" class="d-block w-100" alt="...">
+                                    <img src="assets\Images\yogi.jpg" class="d-block w-100" alt="yogi">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="assets\Images\Choco.jpg" class="d-block w-100" alt="...">
+                                    <img src="assets\Images\Choco.jpg" class="d-block w-100" alt="Choco">
                                   </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
