added css transition, hover and gif background image

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
              <!-- Nav Bar end -->
                 </div>  
           </div>
-
+<div class="infoContainer">
 <!-- row 2 begins, will display my contact info -->
 <div class="row">
   <h2>Contact me at:</h2>
@@ -42,9 +42,9 @@
 </div>
 <!-- tell them they also have option to leave message -->
 <div class="row">
-  <h4>Or Leave Your Info Below</h4>
+  <h4>Or   Leave Your Info Below</h4>
 </div>
-
+</div>
 
 <!-- form row to hold contact info and message of a person -->
 <div class="row">
@@ -53,21 +53,21 @@
         <div class="col-sm form"> 
             <form>
                 <div class="form-group" >
-                  <label for="formGroupExampleInput">Name</label>
+                  <label for="label formGroupExampleInput">Name</label>
                   <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Write Something">
                 </div>
                 <br>
                 <div class="form-group">
-                  <label for="formGroupExampleInput2">Subject</label>
+                  <label for=" label formGroupExampleInput2">Subject</label>
                   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Anything">
                 </div>
                 <br>
                 <div class="form-group">
-                    <label for="formGroupExampleInput2">Message</label>
+                    <label for="label formGroupExampleInput2">Message</label>
                     <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Please" style="height: 40px">
                   </div>
               </form>
-              <button type="button" class="btn btn-outline-danger">Submit</button>
+              <button type="button" class="btn btn-danger">Submit</button>
         </div>
      </div>
         
