--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylessheet" href="assets/css/style.css">
-    <title>Bootstrap Portfolio</title>
-</head>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,10 +9,10 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap" rel="stylesheet">
     <title>bootstrap Portfolio</title>
+    
 </head>
 <body>
-  
-<div class="container">
+  <div class="container">
         <!-- header row -->    
    <div class="row">
                 <!-- col with About Me -->
@@ -59,7 +51,7 @@
                 <div class="card">
                   <div class="card-header" id="headingOne">
                     <h2 class="mb-0">
-                      <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: sienna;">
+                      <button class="btnColor btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: sienna;">
                         Portfolio
                       </button>
                     </h2>
@@ -97,7 +89,7 @@
                   <div class="card">
                       <div class="card-header" id="headingTwo">
                         <h2 class="mb-0">
-                          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: sienna;">
+                          <button class=" btnColor btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: sienna;">
                             About Me
                           </button>
                         </h2>
