commented out prev html files used

--- a/new.html
+++ b/new.html
@@ -11,17 +11,69 @@
 <body>
     <div class= "row container">
         <!-- nav bar -->
-        <div class= "col s3 nav">
+        <div class= "col s3 m3 l3 nav">
+            <nav> <!-- navbar content here  --> </nav>
+
+            <ul>
+              <li><div class="user-view">
+                <div class="background">
+                  <img src="">
+                </div>
+                <p class="white-text name">Massiel Escano</span></p>
+                <p class="white-text" email>Massielescano@yahoo.com</p>
+              </div></li>
+              <li><a href="https://www.linkedin.com/in/massiel-escano/"><i class="material-icons">LinkedIn</a></li>
+              <li><a href="https://github.com/Massiel50">GitHub</a></li>
+            </ul>
+            <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->     
         
         </div>
 
         <!-- main page -->
-        <div class= "col s9 main">
+        <div class= "col s9 m9 l9 main">
+        <div class="row frontPic"></div>
+
+        <div class="row bioText">
+        <p> I am Massiel, the last of my kind. I was born in Dominican Republic
+            and migrated to the U.S of A very young. I grew up in bronx, New York and lived there
+           the majority of my life. I then moved to Los Angeles and lived there for 7 years.
+           Now I am here in Florida, ready to retire. I have a long ways from that.
+            I have studied for a bachelors in Computer Information Systems, specializing in software
+           programming. I decided that completing my degree was pointless and not cost efficient.
+           I am a very ambitious person, and to me this is a make it or break it point in my life. 
+           That's what I say to motivate myself and put a fire in me.
+            In my own time, I dont socialize much. Even though I don't, I can
+           make friends very easily. I stay home for the most part, though I do love
+           to sample different types of food, especially asian dining. I eat chocolate ALL the time.
+           My favorite is belgium milk chocolate. Pretty much anything sweet will float my boat. I enjoy 
+          yoga, meditation and any calm environment. I also enjoy video games, mostly rpg and simulation games.
+          For the most part, I go with the flow because life is too short. </p>
+        </div>
+
+        <!-- portofio -->
+
+            <div class="row">
+                <div class="col s12 m7">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="images/sample-1.jpg">
+                      <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
         </div>
     </div>
 
-
+</div>
 
 
 
