--- a/new.html
+++ b/new.html
@@ -53,29 +53,18 @@
         <!-- portofio -->
 
             <div class="row">
-                <div class="col s12 m7">
-                  <div class="card">
+                <div class="col s3 m4 card">
                     <div class="card-image">
-                      <img src="images/sample-1.jpg">
-                      <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                      <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                      <img src="./assets/Images/calenDar pic.png">
                     </div>
                     <div class="card-action">
-                      <a href="#">This is a link</a>
+                      <a href="https://github.com/Massiel50/calenDar">calenDar Github link</a>
                     </div>
-                  </div>
                 </div>
               </div>
 
         </div>
     </div>
-
-</div>
-
-
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
