--- a/new.html
+++ b/new.html
@@ -1,71 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-     <link rel="stylesheet" href="./assets/css/newStyle.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/newStyle.css" />
     <title>Massiel's Portfolio</title>
-</head>
-<body>
-    <div class= "row container">
-        <!-- nav bar -->
-        <div class= "col s3 m3 l3 nav">
-            <nav> <!-- navbar content here  --> </nav>
-
-            <ul>
-              <li><div class="user-view">
-                <div class="background">
-                  <img src="">
-                </div>
-                <p class="white-text name">Massiel Escano</span></p>
-                <p class="white-text" email>Massielescano@yahoo.com</p>
-              </div></li>
-              <li><a href="https://www.linkedin.com/in/massiel-escano/"><i class="material-icons">LinkedIn</a></li>
-              <li><a href="https://github.com/Massiel50">GitHub</a></li>
-            </ul>
-            <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->     
-        
+  </head>
+  <body>
+    <div class="col s12 m12 l12">
+      <!-- navbar contents here, like maybe a pic-->
+      <nav>
+        <div class="nav-wrapper #e65100 orange darken-4">
+          <a href="https://github.com/massiel50" class="brand-logo center"
+            >Massiel Escano </a>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li>
+              <a href="https://www.linkedin.com/in/massiel-escano/">LinkedIn</a>
+            </li>
+            <li><a href="https://github.com/Massiel50">Github</a></li>
+           
+          </ul>
+          <div class="profession">Full Stack Developer</div>
         </div>
-
-        <!-- main page -->
-        <div class= "col s9 m9 l9 main">
+      </nav>
+    </div>
+    <div class="row container">
+      <!-- main page -->
+      <div class="col s12 m12 l12 main">
         <div class="row frontPic"></div>
 
         <div class="row bioText">
-        <p> I am Massiel, the last of my kind. I was born in Dominican Republic
-            and migrated to the U.S of A very young. I grew up in bronx, New York and lived there
-           the majority of my life. I then moved to Los Angeles and lived there for 7 years.
-           Now I am here in Florida, ready to retire. I have a long ways from that.
-            I have studied for a bachelors in Computer Information Systems, specializing in software
-           programming. I decided that completing my degree was pointless and not cost efficient.
-           I am a very ambitious person, and to me this is a make it or break it point in my life. 
-           That's what I say to motivate myself and put a fire in me.
-            In my own time, I dont socialize much. Even though I don't, I can
-           make friends very easily. I stay home for the most part, though I do love
-           to sample different types of food, especially asian dining. I eat chocolate ALL the time.
-           My favorite is belgium milk chocolate. Pretty much anything sweet will float my boat. I enjoy 
-          yoga, meditation and any calm environment. I also enjoy video games, mostly rpg and simulation games.
-          For the most part, I go with the flow because life is too short. </p>
+          <p>
+            I am Massiel, the last of my kind. I was born in Dominican Republic
+            and migrated to the U.S of A very young. I grew up in bronx, New
+            York and lived there the majority of my life. I then moved to Los
+            Angeles and lived there for 7 years. Now I am here in Florida, ready
+            to retire. Just kidding, I have a long ways from that. I have
+            studied for a bachelors in Computer Information Systems,
+            specializing in software programming. I decided that completing my
+            degree was taking too long and not cost efficient, and so I
+            completed the UCF Full Stack web development bootcamp. I am a very
+            ambitious person, and to me this is the start of a very exciting
+            career. In my own time, I dont socialize much. Even though I don't,
+            I can make friends very easily. I stay home for the most part,
+            though I do love to sample different types of food, especially asian
+            dining. I eat chocolate ALL the time. My favorite is belgium milk
+            chocolate. Pretty much anything sweet will float my boat. I enjoy
+            yoga, meditation and any calm environment. I also enjoy video games,
+            mostly rpg and simulation games. For the most part, I go with the
+            flow because life is too short.
+          </p>
         </div>
 
         <!-- portofio -->
 
-            <div class="row">
-                <div class="col s3 m4 card">
-                    <div class="card-image">
-                      <img src="./assets/Images/calenDar pic.png">
-                    </div>
-                    <div class="card-action">
-                      <a href="https://github.com/Massiel50/calenDar">calenDar Github link</a>
-                    </div>
-                </div>
-              </div>
-
+        <div class="row">
+          <div class="col s4 m4 l4 card">
+            <div class="card-image">
+              <img src="./assets/Images/calenDar pic.png" />
+            </div>
+            <div class="card-action">
+              <a href="https://github.com/Massiel50/calenDar"
+                >calenDar Github link</a
+              >
+            </div>
+          </div>
+          <!-- --------------------------------------------------------------------------------- -->
+          <div class="col s4 m4 l4 card">
+            <div class="card-image">
+              <img src="./assets/Images/PWA-Budget tracker.png" />
+            </div>
+            <div class="card-action">
+              <a href="https://github.com/Massiel50/PWA-Budget"
+                >Budget Tracker Github link</a
+              >
+            </div>
+          </div>
+          <!-- =============================================================================== -->
+          <div class="col s4 m4 l4 card">
+            <div class="card-image">
+              <img src="./assets/Images/Food_Bonanza.png" />
+            </div>
+            <div class="card-action">
+              <a href="https://github.com/tcorn94/Food_Bonanza"
+                >Food Bonanza Github link</a
+              >
+            </div>
+          </div>
+          <!-- -------------------------------------------------------------------------------- -->
+          <div class="col s4 m4 l4 card">
+            <div class="card-image">
+              <img src="./assets/Images/BaMF.png" />
+            </div>
+            <div class="card-action">
+              <a href="https://github.com/Massiel50/bamf">BAMF Github link</a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </body>
 </html>
