rid of white space and typo error on comment

--- a/new.html
+++ b/new.html
@@ -57,8 +57,7 @@
           </p>
         </div>
 
-        <!-- portofio -->
-
+        <!-- portfolio -->
         <div class="row">
           <div class="col s4 m4 l4 card">
             <div class="card-image">
@@ -66,8 +65,7 @@
             </div>
             <div class="card-action">
               <a href="https://github.com/Massiel50/calenDar"
-                >calenDar Github link</a
-              >
+                >calenDar Github link</a>
             </div>
           </div>
           <!-- --------------------------------------------------------------------------------- -->
@@ -77,19 +75,17 @@
             </div>
             <div class="card-action">
               <a href="https://github.com/Massiel50/PWA-Budget"
-                >Budget Tracker Github link</a
-              >
+                >Budget Tracker Github link</a>
             </div>
           </div>
-          <!-- =============================================================================== -->
+          <!-------------------------------------------------------------------------------------->
           <div class="col s4 m4 l4 card">
             <div class="card-image">
               <img src="./assets/Images/Food_Bonanza.png" />
             </div>
             <div class="card-action">
               <a href="https://github.com/tcorn94/Food_Bonanza"
-                >Food Bonanza Github link</a
-              >
+                >Food Bonanza Github link</a>
             </div>
           </div>
           <!-- -------------------------------------------------------------------------------- -->
