added logos for a links

--- a/new.html
+++ b/new.html
@@ -16,16 +16,13 @@
       <!-- navbar contents here, like maybe a pic-->
       <nav>
         <div class="nav-wrapper #e65100 orange darken-4">
-          <a href="https://github.com/massiel50" class="brand-logo center"
-            >Massiel Escano </a>
-          <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li>
-              <a href="https://www.linkedin.com/in/massiel-escano/">LinkedIn</a>
+          <a href="https://github.com/massiel50" class="brand-logo center">Massiel Escano </a>
+          <div id="nav-mobile" class="left hide-on-med-and-down">
+              <a href="https://www.linkedin.com/in/massiel-escano/"><img src= "./assets/Images/LI-In-Bug.png" alt="LinkedIn Logo"width="65px" height="65px" >
             </li>
-            <li><a href="https://github.com/Massiel50">Github</a></li>
-           
-          </ul>
-          <div class="profession">Full Stack Developer</div>
+              <a href="https://github.com/Massiel50"><img src= "./assets/Images/GitHub-Mark-64px.png" alt="Github Logo"width="65px" height="65px" >
+          </div>
+          <div class="profession">Full Stack Developer</div> 
         </div>
       </nav>
     </div>
